# strict-mac-cpp26

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  homebrew-llvm.cmake
